fixed buttons and aligned content to the center

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 canvas {
     border: 1px solid dimgray;
-    height: 300px;
+    height: 500px;
 }
 
-h1 {
+h1, h2 {
     font-family: arial;
     color: dimgray;
 }
@@ -15,4 +15,12 @@ body {
 
 .container {
     margin-top: 50px;
+    align-self: center;
+}
+
+button {
+    width: 130px;
+    height: 30px;
+    border-radius: 3px;
+    margin-top: 3px;
 }
